# _python_clean_code

./: .gitignore  pyproject.toml  readme.md  requirements.txt
algorithm/: linkedlist.ipynb  max_heap.ipynb
beyond_the_basic_stuff_with_python/: README.md
devall-class-oop-test/arch-project/tests/: test_service.py
fastapi-complete-course/oop/: oop.ipynb
fastapi_complete_guide/01-Welcome/: main.py
fastapi_complete_guide/03-Requests/: 01_main_path.py  02_main_query.py  03_main_rbody.py  04_main_form.py  05_main_request.py
fastapi_complete_guide/04-Responses/: 01_main_response.py
fastapi_complete_guide/05-Templates/start/: 01_main.py  02_main_static.py
fastapi_complete_guide/06-Router/start/: main.py  main_org.py
fastapi_complete_guide/07-Pydantic/: main.py  pydantic_01.py  pydantic_02.py  pydantic_03.py  pydantic_04.py  pydantic_05.py
fastapi_complete_guide/08-FastAPI_Async_Thread/: main.py
fastapi_complete_guide/09-DB_Fundamentals/: 01_db_config_data.sql  02_db_basic.py  03_pool_practice.py  04_context_practice.py  05_module_context.py  05_module_direct.py  06_cursor_fetch.py  07_bind_variable.py  database.py
fastapi_complete_guide/10-Blog_DB_Handling/start/: readme.md
src/: requirements.txt
src/algorithm/: max_heap.ipynb  test.ipynb
src/beyond_the_basic_stuff_with_python/: chapter_15.ipynb
src/devall-class-oop-test/arch-project/: database.db
src/devall-class-oop-test/oop-example/: main.ipynb
src/type-python-oop-study/01 파이썬, 객체지향 프로그래밍/: 02-abstraction-basic.ipynb  03-namespace.ipynb  04-self.ipynb
(+27 files in other folders)
