[tool.poetry]
name = "python-clean-archi"
version = "0.1.0"
description = "박용규 <herzblue@gmail.com>"
authors = ["박용규 <herzblue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
ipykernel = "^6.29.5"
black = "^24.4.2"
fastapi = "^0.111.0"
peewee = "^3.17.6"
pytest = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
